manifests/dev/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: dev
  labels:
    app: bookmark-app
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: api
  template:
    metadata:
      labels:
        tier: api
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        runAsNonRoot: true
      containers:
      - name: bookmark-app-api
        image: wajeeh8/bookmark-app:serverk8s
        imagePullPolicy: Always
        securityContext:
          runAsUser: 33
          runAsGroup: 33
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - All
---
