manifests/dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: dev
  labels:
    app: bookmark-app
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: api
  template:
    metadata:
      labels:
        tier: api
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        runAsNonRoot: true
      containers:
      - name: bookmark-app-api
        image: wajeeh8/bookmark-app:serverk8s
        imagePullPolicy: Always
        securityContext:
          runAsUser: 33
          runAsGroup: 33
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - All
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: dev
  labels:
    app: bookmark-app
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: bookmark-app-client
        image: wajeeh8/bookmark-app:clientlatest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - ALL
        command: ["sh", "-c"]
        args: ['sed -i  "s/endpoint/https:\/\/apidev.bookmark.com/g" build/static/js/main.3ae9d6e4.js && serve -s build']
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: db
    - podSelector:
        matchLabels:
          tier: api
    ports:
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 3307
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
     - dev.bookmark.com
     - apidev.bookmark.com
    secretName: tls-secret
  rules:
  - host: dev.bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clientsvc
            port:
              number: 80
  - host: apidev.bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: apisvc
            port:
              number: 80
---
---
apiVersion: v1
kind: Service
metadata:
  name: dbsvc
  namespace: dev
  labels:
    app: dbsvc
spec:
  clusterIP: None
  ports:
  - port: 3306
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: dbsvc-read
  namespace: dev
  labels:
    app: dbsvc-read
    readonly: "true"
spec:
  ports:
  - port: 3306
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: apisvc
  namespace: dev
spec:
  selector:
    tier: api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clientsvc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    tier: frontend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: dev
  labels:
    tier: db
spec:
  selector:
    matchLabels:
      app: db
  serviceName: dbsvc
  replicas: 3
  template:
    metadata:
      labels:
        app: db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
      containers:
      - name: db
        image: wajeeh8/mysqlk8s
        imagePullPolicy: Always
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - ALL
        ports:
        - name: db
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              mysqladmin ping -u ${MYSQL_ADMIN_USER} -p${MYSQL_ADMIN_PASSWORD}
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              mysql -h 127.0.0.1 -u ${MYSQL_ADMIN_USER} -p${MYSQL_ADMIN_PASSWORD} -e "SELECT 1"
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      - name: xtrabackup
        image: gcr.io/google-samples/xtrabackup:1.0
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - ALL
        ports:
        - name: xtrabackup
          containerPort: 3307
        command:
        - bash
        - "-c"
        - |
          [...]
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
---
